--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="node_modules/@material-tailwind/html/scripts/collapse.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
